--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-
 .titulo {
     background-color: rgb(0, 255, 76);
 }
 
 p {
     color: red;
-    text-align: center;
+    text-align: justify;
     font-size: 15px;
 }
