--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     background-color:black;
 }
 
+.paragrafo {
+    text-align: justify;
+    font-size: 50px;
+}
 p {
     color: red;
     text-align: justify;
