--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-color:black;
 }
 
-p.paragrafo {
+.paragrafo {
     color: rgb(190, 40, 170);
     text-align: justify;
     font-size: 55px;
