--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     background-color:black;
 }
 
+.cabecalho {
+    font-size: 200px;
+    text-align: center;
+}
+
 .paragrafo {
     color: rgb(190, 40, 170);
     text-align: justify;
