--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 #titulo{
     text-align:center;
-    background-color:black;
+    background-color:rgb(37, 210, 223);
     font-size: 50px;
 }
 
