--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@ body {
 ul {
  inline-size: auto;
 }
+
+#logo {
+    height: 200px;
+    width: 20%;
+    padding: 10px;
+    margin: 15px;
+    border: solid red;
+}
