--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ ul {
 
 #logo {
     height: 200px;
-    width: 20%;
+    width: 200px;
     padding: 10px;
     margin: 15px;
     border: solid red;
