--- a/style.css
+++ b/style.css
@@ -28,5 +28,5 @@ ul {
     width: 400px;
     padding: 5px;
     margin: 15px;
-    border: solid rgb(190, 40, 170);
+    border: outset rgb(190, 40, 170);
 }
