--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(#e7c7b0, red, rgb(216, 43, 164));
+    background-image: linear-gradient(#ecc7e7, rgb(236, 21, 201), rgb(214, 145, 193));
 }
 
 #titulo{
