--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(#ecc7e7, rgb(182, 89, 166), rgb(214, 145, 193));
+    background-image: linear-gradient(#d47cc9, rgba(182, 89, 167, 0.226), rgb(214, 145, 193));
 }
 
 #titulo{
