--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
  header {
     padding: 20px;
-    background-color: aquamarine;
+    background-color: rgb(127, 246, 255);
     border-bottom: 5px solid white;
  }
 #titulo{
